Added full-width page banners and menu list and entries block styling

--- a/wp-content/themes/fipradotcom/sass/elements/_elements.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_elements.scss
@@ -10,7 +10,7 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
-  background: url('img/noise_bg.png') top left repeat, $color__fipra-light-gray;
+//  background: url('img/noise_bg.png') top left repeat, $color__fipra-light-gray;
 }
 
 blockquote, q {
