--- a/wp-content/themes/fipradotcom/sass/layout/_global-network-menu.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_global-network-menu.scss
@@ -2,7 +2,7 @@
   width:100%;
   display:none;
   background-color: $color__fipra-blue;
-  @include linear-gradient(lighten($color__fipra-blue, 5%) 0%, $color__fipra-blue 100%);
+//  @include linear-gradient(lighten($color__fipra-blue, 5%) 0%, $color__fipra-blue 100%);
 
   #global-network-menu {
     @include outer-container($container__outer-width);
@@ -158,7 +158,7 @@
       font-family: $font__sans;
       box-shadow: 0 2px 2px rgba(black, 0.2);
       width: 100%;
-      @include border-bottom-radius(4px);
+
       padding:$v-rhythm * 2 em(20px);
       left: 0;
       top: 60px;
@@ -592,8 +592,8 @@
       border-top:1px solid darken($color__fipra-light-gray, 15%);
       border-bottom:1px solid white;
       background-color: $color__fipra-light-gray;
-      @include border-left-radius(4px);
-      @include border-right-radius(4px);
+
+
       @include media($media__medium) {
         padding:$v-rhythm / 2 em(20px);
         @include font-size(18);
