--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -16,9 +16,10 @@
 
 #header-container {
   @include clearfix;
-  @include linear-gradient(white 90%, darken(white, 5%) 100%);
+  background-color: white;
+//  @include linear-gradient(white 90%, darken(white, 5%) 100%);
 //  @include linear-gradient(darken(white, 3%) 90%, darken(white, 5%) 100%);
-  &.with-border { border-top:$color__fipra-blue solid $v-rhythm / 2; }
+  &.with-border { @include media($media__large) { border-top:$color__fipra-blue solid $v-rhythm / 2; } }
 
   header.site-header {
     @include row();
@@ -68,7 +69,7 @@
         background-color: $color__fipra-blue;
         padding:$v-rhythm em(12) $v-rhythm / 2 em(12);
         @include transition(all 0.2s ease-out);
-        @include linear-gradient($color__fipra-blue 60%, darken($color__fipra-blue, 7%) 100%);
+//        @include linear-gradient($color__fipra-blue 60%, darken($color__fipra-blue, 7%) 100%);
         &.reverse-background { @include linear-gradient(darken($color__fipra-blue-gray, 15%) 0%, $color__fipra-blue-gray 60%);}
         &:hover {
           padding-top:$v-rhythm * 2;
