--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -8,11 +8,12 @@
 @import "global-network-menu";
 
 #content-container {
+  @include clearfix;
   width:100%;
 
-  &.with-border { border-top: 3px solid darken(white, 15%); }
+//  &.with-border { border-top: 3px solid darken(white, 15%); }
 
-  @include media($media__xlarge) { padding-top:$v-rhythm * 2; }
+//  @include media($media__xlarge) { padding-top:$v-rhythm * 2; }
   &.with-hero-banner { padding-top:0; }
 
   #breadcrumbs {
@@ -35,13 +36,13 @@
   #content {
     @include row();
     @include outer-container($container__outer-width);
-    background-color: white;
-    padding-top: $v-rhythm;
-    padding-bottom: $v-rhythm * 2;
-    box-shadow:0 0 10px rgba(black, 0.1);
+//    background-color: white;
+//    padding-top: $v-rhythm;
+//    padding-bottom: $v-rhythm * 2;
+//    box-shadow:0 0 10px rgba(black, 0.1);
     @include media($media__xlarge) {
-      @include border-left-radius(4px); @include border-right-radius(4px);
-      border:1px solid darken($color__fipra-light-gray, 5%);
+
+//      border:1px solid darken($color__fipra-light-gray, 5%);
       margin-bottom:$v-rhythm * 2;
     }
 
@@ -70,9 +71,14 @@
   }
 
   .content-area {
-    padding:$v-rhythm * 2 em(40px) 0;
-    @include media(max-width $media__small) { padding:$v-rhythm * 2 em(20px) 0; }
-    margin:0;
+    @include outer-container($container__content-width);
+    padding-left:em(20px);
+    padding-right:em(20px);
+
+    @include media($media__large) { @include outer-container($container__outer-width); padding:0; }
+//    padding:$v-rhythm * 2 em(40px) 0;
+//    @include media(max-width $media__small) { padding:$v-rhythm * 2 em(20px) 0; }
+//    margin:0;
   }
 
   @include media($media__medium) {
@@ -83,13 +89,12 @@
 }
 
 .page-nav {
-  padding:$v-rhythm em(20px);
-
+  background-color: $color__fipra-light-gray;
+  border-bottom:2px solid rgba(black, 0.2);
   @include media($media__medium) {
-    padding:$v-rhythm em(40px);
-    background-color: lighten($color__fipra-periwinkle, 10%);
-    @include linear-gradient(lighten($color__fipra-periwinkle, 12%) 60%, lighten($color__fipra-periwinkle, 7%) 100%);
-    border-bottom:1px solid darken(white, 13%);
+    padding:$v-rhythm * 0.5 0;
+    //    @include linear-gradient(lighten($color__fipra-periwinkle, 12%) 60%, lighten($color__fipra-periwinkle, 7%) 100%);
+//    border-bottom:1px solid darken(white, 13%);
   }
 }
 
@@ -131,6 +136,8 @@
     &.no-margin { margin:0; }
     &.no-bottom-margin { margin-bottom:0; }
     &.top-margin { margin-top:$v-rhythm * 2; }
+
+    &.no-m-margin { @include media(max-width $media__medium) { margin:0; } }
   }
   .col-#{$i}-xl {
     @include media($media__large) { @include span-columns($i); }
@@ -138,6 +145,74 @@
     &.no-margin { margin:0; }
     &.no-bottom-margin { margin-bottom:0; }
     &.top-margin { margin-top:$v-rhythm * 2; }
+
+    &.no-m-margin { @include media(max-width $media__medium) { margin:0; } }
   }
 }
 
+
+.full-width-block-container {
+  position:relative;
+
+  .full-width-block-content {
+    @extend .content-area;
+    padding-top:$v-rhythm * 2 !important;
+    padding-bottom:$v-rhythm * 2 !important;
+//    &.no-margin { padding:0 em(20px); }
+//    @include media($media__large) { padding:$v-rhythm * 3 0; &.no-margin { padding:0; } }
+
+//    color:darken(#f1f3f5, 45%);
+    h1, h2, h3, h4, h5, h6 { color:$color_soft-black; }
+  }
+
+
+  &.dark-grey {
+    background-color: rgba(darken($color__fipra-blue-gray, 12%), 0.9);
+//    @include linear-gradient(rgba(darken($color__fipra-blue-gray, 10%), 0.8) 0%, rgba(darken($color__fipra-blue-gray, 14%), 0.8) 100%);
+    color:lighten($color__fipra-blue-gray, 34%) !important;
+    a { color:lighten($color__fipra-blue-gray, 34%); }
+  }
+
+  &.grey {
+    background-color: rgba($color__fipra-blue-gray, 0.9);
+//    @include linear-gradient(rgba($color__fipra-blue-gray, 0.9) 0%, rgba(darken($color__fipra-blue-gray, 5%), 0.9));
+    color:lighten($color__fipra-blue-gray, 40%) !important;
+    h1, h3 { color:white; }
+    a { color:lighten($color__fipra-blue-gray, 40%); }
+  }
+  &.light-grey {
+    background-color: rgba(lighten($color__fipra-blue-gray, 12%), 0.9);
+    color:lighten($color__fipra-blue-gray, 42%) !important;
+    h1, h3 { color:white; }
+    a { color:lighten($color__fipra-blue-gray, 42%); }
+  }
+  &.periwinkle {
+    background-color: rgba($color__fipra-periwinkle, 0.9);
+    color:darken($color__fipra-periwinkle, 40%) !important;
+    h1, h3 { color:$color_soft-black; }
+    a {
+      color:$color__fipra-blue;
+      &:hover { color:$color__fipra-blue-gray; }
+    }
+  }
+  &.turquoise {
+    background-color: rgba($color__fipra-turquoise, 0.9);
+    color:lighten($color__fipra-turquoise, 42%) !important;
+    h1, h3 { color:white; }
+    a { color:lighten($color__fipra-turquoise, 42%); }
+  }
+  &.violet {
+    background-color: rgba($color__fipra-violet, 0.9);
+    color:lighten($color__fipra-violet, 28%) !important;
+    h1, h3 { color:white; }
+    a { color:lighten($color__fipra-violet, 42%); }
+  }
+
+  &.dark-grey, &.grey, &.light-grey, &.turquoise, &.violet {
+    h1, h2, h3, h4, h5, h6 { color:white; }
+    .btn { @extend .btn-white; }
+    li.active a { background:rgba(white, 0.1); color:white !important; }
+    a:hover { color:white; }
+  }
+
+}
