--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -5,13 +5,19 @@ $color__fipra-blue-gray: #5F697F;
 $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
-$color__fipra-light-gray: #EBEAE8;
+$color__fipra-lighter-gray: #f4f3f2;
+$color__fipra-light-gray: #e1e2e6;
 $color__fipra-orange: #DE8A56;
 $color__fipra-brown: #866551;
 $color__fipra-light-orange: #fce5c3;
 
+$color_soft-black: #222;
+$color_black: #000;
+$color_soft-white: darken(white, 3%);
+$color_white: #fff;
+
 //Underscores colours
-$color__background-body: $color__fipra-light-gray;
+$color__background-body: #f6f7fa;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
@@ -32,7 +38,3 @@ $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
-$color_soft-black: #222;
-$color_black: #000;
-$color_soft-white: darken(white, 5%);
-$color_white: #fff;
