--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -1,46 +1,47 @@
 #footer-global-network-container {
   clear:both;
-  background-color: darken($color__fipra-light-gray, 15%);
-//  @include linear-gradient(darken($color__fipra-light-gray, 10%) 40%, darken($color__fipra-light-gray, 15%) 100%);
-//  border-top:1px solid darken($color__fipra-light-gray, 25%);
-  border-bottom:3px solid darken($color__fipra-blue-gray, 10%);
+//  @extend .page-nav;
+//  border-top:1px solid darken($color__fipra-light-gray, 5%);
+  background-color:$color__fipra-blue-gray;
+  border-top:1px solid lighten($color__fipra-blue-gray, 9%);
+  border-bottom:1px solid lighten($color__fipra-blue-gray, 9%);
+  padding:$v-rhythm * 0.75 0;
 
   #footer-global-network {
+    @extend .content-area;
+    color:white;
     text-align: center;
-    font-family: $font__sans;
-    padding:$v-rhythm * 2 40px;
-    @include media($media__xlarge) {
-      padding:$v-rhythm * 2 0;
-    }
-    .title {
-      @include font-size(24);
-      font-weight: $font__black;
-      display: block;
+    padding-top: $v-rhythm;
+    padding-bottom: $v-rhythm;
+
+    label {
+      display:block;
+      @include font-size(21);
+      margin-top:em(3px);
       margin-bottom:$v-rhythm;
-      @include media($media__medium) {
-        display: inline-block;
-        padding-right:20px;
+      @include media($media__large) {
+        float:left;
+        margin-right:em(20px);
+        margin-bottom:0;
       }
     }
-    select {
-      optgroup {
-        background-color:darken($color__fipra-light-gray, 10%);
-      }
-      text-align: left;
-      padding:$v-rhythm / 2 em(10px);
-      width:80%;
-      border:0;
-      background-color: $color__fipra-light-gray;
-      @include linear-gradient(darken($color__fipra-light-gray, 5%) 0%, lighten($color__fipra-light-gray, 5%) 20%);
-      border-top:1px solid darken($color__fipra-light-gray, 15%);
-      border-bottom:1px solid white;
-      background-color: $color__fipra-light-gray;
 
+    .select-wrapper {
+      overflow:hidden;
 
-      @include media($media__medium) {
-        padding:$v-rhythm / 2 em(20px);
-        @include font-size(18);
-        width:500px;
+      select {
+        width:100%;
+        color:$color_soft-black;
+        padding:$v-rhythm * 0.5 em(20px);
+        optgroup {
+          background-color:$color__fipra-light-gray;
+        }
+        text-align: left;
+        @include font-size(16);
+        border:0;
+        background-color: white;
+
+        @include media($media__medium) { @include font-size(16); }
       }
     }
   }
@@ -48,38 +49,16 @@
 
 #footer-container {
   @include clearfix;
-  font-family:$font__sans;
-  color:lighten($color__fipra-blue-gray, 45%);
+  color:lighten($color__fipra-blue-gray, 40%);
   background: $color__fipra-blue-gray;
-//  @include linear-gradient(lighten($color__fipra-blue-gray, 5%) 0%, $color__fipra-blue-gray 100%);
 
   h5 { color:lighten($color__fipra-blue-gray, 30%); }
-  a {
-    color:white;
-    &:hover { color:darken(white, 20%); }
-
-    &.btn {
-      color:white;
-      background-color:lighten($color__fipra-blue-gray, 20%);
-      @include font-size(14);
-    }
-    &.primary {
-      color:$color__fipra-blue-gray;
-      text-shadow: none;
-      background:white;
-      &:hover { background-color:darken(white, 20%); }
-    }
-    &.secondary { border-color: white; background: none;
-      &:hover { border-color: darken(white, 20%); }
-    }
+  a:not(&.btn) { color:white;
+    &:hover { opacity:0.7; }
   }
 
   footer {
-    @include row();
-    @include outer-container($container__outer-width);
-    padding:$v-rhythm em(20px);
-    @include media($media__xlarge) { padding:$v-rhythm 0; }
-    @include media($media__small) { padding:$v-rhythm em(40px); }
+    @extend .content-area;
 
     .footer-section {
       @include span-columns(12);
