--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -5,6 +5,7 @@ $color__fipra-blue-gray: #5F697F;
 $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
+$color__fipra-gold: #e5c75c;
 $color__fipra-lighter-gray: #f4f3f2;
 $color__fipra-light-gray: #e1e2e6;
 $color__fipra-orange: #DE8A56;
