--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -18,7 +18,7 @@ $color_soft-white: darken(white, 3%);
 $color_white: #fff;
 
 //Underscores colours
-$color__background-body: #f6f7fa;
+$color__background-body: #fff;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
