--- a/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
@@ -15,44 +15,38 @@
 
   &.dark-grey {
     background-color: rgba(saturate(darken($color__fipra-blue-gray, 20%), 5%), 0.9);
-    //    @include linear-gradient(rgba(darken($color__fipra-blue-gray, 10%), 0.8) 0%, rgba(darken($color__fipra-blue-gray, 14%), 0.8) 100%);
+//        @include linear-gradient(rgba(saturate(darken($color__fipra-blue-gray, 15%), 5%), 0.8) 0%, rgba(saturate(darken($color__fipra-blue-gray, 20%), 5%), 0.8) 100%);
     color:lighten($color__fipra-blue-gray, 34%);
-    a { color:lighten($color__fipra-blue-gray, 34%); }
   }
 
   &.grey {
     background-color: rgba(saturate(darken($color__fipra-blue-gray, 5%), 5%), 0.9);
     //    @include linear-gradient(rgba($color__fipra-blue-gray, 0.9) 0%, rgba(darken($color__fipra-blue-gray, 5%), 0.9));
     color:lighten($color__fipra-blue-gray, 40%);
-    a { color:lighten($color__fipra-blue-gray, 40%); }
   }
 
   &.light-grey {
     background-color: rgba(saturate($color__fipra-light-gray, 3%), 0.9);
-    color:darken($color__fipra-light-gray, 42%);
+    color:darken($color__fipra-light-gray, 50%);
     h1, h2, h3, h4, h5, h6 { color:$color_soft-black !important; }
     li.active a { color:$color_soft-black !important;}
-    a { color:darken($color__fipra-light-gray, 42%); }
   }
 
   &.periwinkle {
     background-color: rgba(saturate($color__fipra-periwinkle, 3%), 0.9);
     color:darken($color__fipra-periwinkle, 40%);
     h1, h2, h3, h4, h5, h6 { color:$color_soft-black !important; }
-    li.active a { color:$color_soft-black !important;}
   }
 
   &.turquoise {
     background-color: rgba(saturate($color__fipra-turquoise, 3%), 0.9);
     color:lighten($color__fipra-turquoise, 46%);
-    a { color:lighten($color__fipra-turquoise, 46%); }
     li.active { background:rgba(white, 0.2) !important; }
   }
 
   &.violet {
     background-color: rgba(saturate($color__fipra-violet, 4%), 0.9);
     color:lighten($color__fipra-violet, 30%);
-    a { color:lighten($color__fipra-violet, 30%); }
     li.active { background:rgba(white, 0.1) !important; }
   }
 
@@ -66,8 +60,18 @@
   &.dark-grey, &.grey, &.turquoise, &.violet {
     h1, h2, h3, h4, h5, h6 { color:white; }
     .btn { @extend .btn-white; }
+    a { color: white; }
     li.active a { background:rgba(white, 0.1); color:white !important; }
-    a:hover { color:white; }
+  }
+
+  &.periwinkle, &.light-grey {
+    h1, h2, h3, h4, h5, h6 { color:$color_soft-black; }
+    li.active a { color:$color_soft-black !important;}
+    @include media(max-width $media__large) {
+      .entry {
+        &:not(:last-child) { border-bottom:1px solid rgba(black, 0.1) !important; }
+      }
+    }
   }
 
 }
